<resources>
    <string name="app_name">Rootnet Intranet</string>
    <string name="cloud_based">Cloud-Based</string>
    <string name="subdomain">Subdomain</string>
    <string name="url_half">.rootnetapp.com</string>
    <string name="check_domain">Check Domain</string>
    <string name="get_plan">Get a plan</string>
    <string name="failure_connect">Network error, please try again</string>
    <string name="failure_connect_forbidden_access">You don\'t have enough permissions</string>
    <string name="loading_message">Loading</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_domain">Change Company</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="empty_domain">The domain name cannot be empty</string>
    <string name="empty_user">Please provide a username to continue</string>
    <string name="empty_password">Please enter your password to continue</string>
    <string name="empty_confirm_password">Please confirm your password to continue</string>
    <string name="passwords_dont_match">The passwords do not match</string>
    <string name="password_changed_successfully">Your password has been changed successfully.</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="recover_password">Recover your Password</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="bad_credentials">Invalid credentials</string>
    <string name="deep_link_workflow_detail">Workflow Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_token_fragment">Request Token</string>
    <string name="reset_password_fragment">Reset Password</string>
    <string name="username_email">Username or Email</string>
    <string name="link_will_be_sent">A link will be sent to set a new password to the email associated with the user.</string>
    <string name="token">Token</string>
    <string name="paste_token">Copy and paste the token sent.</string>
    <string name="check_email">An email with a validation token has been sent to your email account.</string>
    <string name="timeline">Timeline</string>
    <string name="community">Community</string>
    <string name="workflows">Workflows</string>
    <string name="projects">Projects</string>
    <string name="resourcing">Resourcing</string>
    <string name="reports">Reports</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="login_qr">Login with QR</string>
    <string name="exit">Log out</string>
    <string name="repassword">Repeat your password</string>
    <string name="valid_token">Your token is valid.</string>
    <string name="empty_token">Please enter a valid token</string>
    <string name="enter_password">Enter your new password</string>
    <string name="password_mismatch">Both passwords must match</string>
    <string name="password_changed">Your password was successfully changed, please log in</string>
    <string name="title_activity_sync">SyncActivity</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="phone">Phone number</string>
    <string name="email">Email</string>
    <string name="change_password">Change your password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="empty_name">The name cannot be empty</string>
    <string name="empty_email">The email cannot be empty</string>
    <string name="workflow_manager">Workflow Manager</string>
    <string name="workflow">Workflow</string>
    <string name="tasks">Tasks</string>
    <string name="modules">Modules</string>
    <string name="accounts">Accounts</string>
    <string name="sales">Sales</string>
    <string name="business_oportunities">Business Oportunities</string>
    <string name="synchronize">Sync up</string>
    <string name="synchronization">Synchronization</string>
    <string name="resourcing_planner">Resourcing Planner</string>
    <string name="workflow_list">WORKFLOWS LIST</string>
    <string name="btn_add">+ Add</string>
    <string name="description">Description</string>
    <string name="lastname">Last Name</string>
    <string name="creator">Creator</string>
    <string name="create_workflow_form_workflow_type">Please select a workflow type</string>
    <string name="created_at">Created At</string>
    <string name="condition">Condition</string>
    <string name="country">Country</string>
    <string name="type">Type</string>
    <string name="workflow_type">Workflow Type</string>
    <string name="project_type">Project Type</string>
    <string name="owner">Owner</string>
    <string name="actual_state">Actual State</string>
    <string name="status">Status</string>
    <string name="updated_at">Updated At</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="filters">Filters</string>
    <string name="apply_dynamic_filters">Apply Dynamic Filters</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="filters_counter">Filters (%d)</string>
    <string name="my_workflows">Pending Workflows</string>
    <string name="sorting">Sort By</string>
    <string name="workflow_number">Workflow Number</string>
    <string name="updated_date">Date Updated</string>
    <string name="created_date">Date Created</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="workflow_name">Workflow Name</string>
    <string name="number">Number</string>
    <string name="creation_date">Creation Date</string>
    <string name="basic_info">Basic Information</string>
    <string name="workflow_team">Workflow Team</string>
    <string name="add_workflow">+ Add Workflow</string>
    <string name="project_owner">Proyect Owner</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="department">Department</string>
    <string name="amount">Amount</string>
    <string name="workflow_owner">Workflow Owner</string>
    <string name="search">Search</string>
    <string name="workflow_id">WORKFLOW</string>
    <string name="workflow_project">Workflow Project</string>
    <string name="important_things">IMPORTANT THINGS ABOUT THIS STEP</string>
    <string name="workflow_info">WORKFLOWS INFORMATION</string>
    <string name="step">Step </string>
    <string name="next_step_approver">NEXT STEP APPROVER</string>
    <string name="next_approver">Next step approver:</string>
    <string name="mass_approval">Mass approval</string>
    <string name="start_date">Start Date</string>
    <string name="campaign">Campaign</string>
    <string name="origin">Origin</string>
    <string name="axe">Axe</string>
    <string name="people_involved">PEOPLE INVOLVED</string>
    <string name="people_involved_title">People Involved</string>
    <string name="approval_history">WORKFLOW APPROVAL HISTORY</string>
    <string name="approved">Approved</string>
    <string name="template">TEMPLATE:</string>
    <string name="upload">UPLOAD</string>
    <string name="versions">Versions</string>
    <string name="comments">COMMENTS</string>
    <string name="comment">Comment</string>
    <string name="empty_comment">The comment cannot be empty</string>
    <string name="error_comment">Error uploading comment</string>
    <string name="uploaded_file">File to upload: </string>
    <string name="attach">ATTACH</string>
    <string name="remove_file">REMOVE FILE</string>
    <string name="select_file">Please select a file to upload</string>
    <string name="error_selecting_file">Error selecting the file</string>
    <string name="file_video_not_allowed">Video files are not allowed</string>
    <string name="select_preset">Select what type of document you are uploading</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="filtered_by">Filtered by:</string>
    <string name="comment_ammount">Comments</string>
    <string name="view_comments">View comments</string>
    <string name="add_comment">Add a comment</string>
    <string name="today">Today</string>
    <string name="current_week">Current week</string>
    <string name="current_month">Current month</string>
    <string name="select_date">Select date range</string>
    <string name="end_date">End Date</string>
    <string name="selected_period">Selected period</string>
    <string name="tracking_created">has created a new tracking for</string>
    <string name="status_created">has created a new status for</string>
    <string name="txt_description">Description:</string>
    <string name="txt_statusname">Status name</string>
    <string name="reply">Reply</string>
    <string name="no_items">There are currently no items matching your search parameters.</string>
    <string name="synchronizing">Synchronizing</string>
    <string name="syncErrorNoPermission">No permissions found for this user</string>
    <string name="every_10_mins">Every 10 mins</string>
    <string name="last_sync">Last sync:</string>
    <string name="product_not_enabled">This product has not been assigned to your domain.</string>
    <string name="pending_workflows">Pending Workflows</string>
    <string name="analytics">Analytics</string>
    <string name="user_analytics">My Analytics</string>
    <string name="company_overview">Company Overview</string>
    <string name="my_pending_workflows_for_approval">Pending Workflows for my Approval</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="key">Key</string>
    <string name="author">Author</string>
    <string name="days_open">Days open</string>
    <string name="pending_approval">Pending for Approval</string>
    <string name="pending">Pending</string>
    <string name="updated">Updated</string>
    <string name="out_of_time">Out of Time</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="show_more">Show More</string>
    <string name="tracking">Tracking</string>
    <string name="sales_force">Sales Force - Status</string>
    <string name="users">Users</string>
    <string name="no_selection">No Selection</string>
    <string name="no_selection_hint">- No Selection -</string>
    <string name="multiple_selection_hint">- Select an option to add -</string>
    <string name="form_workflow_type">Workflow Type</string>
    <string name="workflow_detail_activity_enable">Enable</string>
    <string name="workflow_detail_activity_disable">Disable</string>
    <string name="workflow_detail_activity_open">Open</string>
    <string name="workflow_detail_activity_close">Close</string>
    <string name="workflow_detail_activity_export_pdf">Export PDF</string>
    <string name="workflow_detail_activity_share">Share</string>
    <string name="workflow_detail_activity_delete">Delete</string>
    <string name="workflow_detail_files_fragment_title">@string/workflow_detail_files_fragment_documents</string>
    <string name="workflow_detail_files_fragment_no_files">No documents have been uploaded.</string>
    <string name="workflow_detail_files_fragment_no_view_permissions">You do not have permissions to view the files</string>
</resources>