<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timeline"
            android:title="@string/items" />
        <item
            android:id="@+id/nav_community"
            android:title="@string/community" />
        <item
            android:id="@+id/nav_workflows"
            android:title="@string/workflows" />
        <item
            android:id="@+id/nav_projects"
            android:title="@string/projects" />
        <item
            android:id="@+id/nav_resourcing"
            android:title="@string/resourcing" />
        <item
            android:id="@+id/nav_reports"
            android:title="@string/reports" />
    </group>
</menu>