<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginVertical_domain"
            android:layout_marginEnd="@dimen/marginHorizontal_domain"
            android:layout_marginStart="@dimen/marginHorizontal_domain"
            android:layout_marginTop="@dimen/marginVertical_domain"
            android:textColorHint="@color/colorAccent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_email"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorAccent" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginVertical_domain"
            android:layout_marginEnd="@dimen/marginHorizontal_domain"
            android:layout_marginStart="@dimen/marginHorizontal_domain"
            android:layout_marginTop="@dimen/marginVertical_domain"
            android:text="@string/link_will_be_sent"
            android:textColor="@color/colorAccent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_accept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/accept"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</layout>
