<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginVertical_domain"
            android:layout_marginEnd="@dimen/marginHorizontal_domain"
            android:layout_marginStart="@dimen/marginHorizontal_domain"
            android:layout_marginTop="@dimen/marginVertical_domain"
            android:textColorHint="@color/colorAccent">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/input_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/token"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginVertical_domain"
            android:layout_marginEnd="@dimen/marginHorizontal_domain"
            android:layout_marginStart="@dimen/marginHorizontal_domain"
            android:layout_marginTop="@dimen/marginVertical_domain"
            android:text="@string/paste_token"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_accept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/accept"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</layout>