<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lyt_files"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="16dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_title_files"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/workflow_detail_files_fragment_title"
                android:textAllCaps="true"
                android:textColor="@color/workflow_details_section_title"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_title_files"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/workflow_details_section_title_bar"
                app:layout_constraintBottom_toBottomOf="@id/tv_title_files"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_title_files"
                app:layout_constraintTop_toTopOf="@id/tv_title_files" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="tv_title_files,view_title_files" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_files"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier_title" />

            <TextView
                android:id="@+id/tv_no_files"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/workflow_detail_files_fragment_no_files"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier_title"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_no_permissions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/workflow_detail_files_fragment_no_view_permissions"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier_title"
                tools:visibility="visible" />

            <Button
                android:id="@+id/btn_attachment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/attach"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/btn_upload"
                app:layout_constraintTop_toTopOf="@+id/btn_upload" />

            <Button
                android:id="@+id/btn_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:text="@string/upload"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_files" />

            <TextView
                android:id="@+id/tv_file_uploaded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/uploaded_file"
                android:textColor="@color/colorAccent"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_upload" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>